Added can compiler

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
     "require": {
         "php": "^7.0",
         "illuminate/filesystem": "5.4.*",
-        "illuminate/view": "5.4.*"
+        "illuminate/view": "5.4.*",
+        "illuminate/container": "5.4.*",
+        "illuminate/contracts": "5.4.*",
+        "illuminate/events": "5.4.*",
+        "illuminate/support": "5.4.*"
     },
     "autoload": {
         "psr-4": {
